# blue_noise

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust-test.yml
benches/: jfa.rs
src/: cli.rs  lib.rs  main.rs  plot.rs
src/jfa/: mod.rs
src/jfa_cpu/: mod.rs
src/jfa_wgpu/: mod.rs  shader.wgsl
src/mesh/: mod.rs
src/mode1/: mod.rs
src/mode2/: mod.rs
src/mode3/: mod.rs
