[package]
name = "blue_noise"
version = "0.1.0"
edition = "2021"

[dependencies]
plotly = "0.10"
rand = "0.8"
honeycomb = { git = "https://github.com/LIHPC-Computational-Geometry/honeycomb", tag = "0.6.0"}

# GPU-JFA
#bytemuck = { features = ["derive"] }
#cfg-if.workspace = true
#encase = { workspace = true, features = ["glam"] }
#flume.workspace = true
#getrandom.workspace = true
#glam.workspace = true
#ktx2.workspace = true
#log.workspace = true
#nanorand.workspace = true
#noise.workspace = true
#obj.workspace = true
#png.workspace = true
#pollster.workspace = true
#web-time.workspace = true
#wgpu = { workspace = true, default-features = false, features = [
#    "wgsl",
#    "dx12",
#    "metal",
#] }
#winit.workspace = true

wgpu = "23"
pollster = "0.3"
log = "0.4"
bytemuck = "1.19"
flume = "0.11"
getrandom = "0.2"
env_logger = "0.11"


#anyhow = "1.0.91"
#argh = "0.1.5"
#arrayvec = "0.7"
#bincode = "1"
#bit-vec = "0.8"
#bitflags = "2.6"
#bytemuck = { version = "1.19" }
#cfg_aliases = "0.1"
#cfg-if = "1"
#criterion = "0.5"
#codespan-reporting = "0.11"
#ctor = "0.2"
#document-features = "0.2.10"
#encase = "0.9"
#env_logger = "0.11"
#fern = "0.6"
#flume = "0.11"
#futures-lite = "2"
#getrandom = "0.2"
#glam = "0.28"
#heck = "0.5.0"
#image = { version = "0.24", default-features = false, features = ["png"] }
#indexmap = "2"
#itertools = { version = "0.10.5" }
#ktx2 = "0.3"
#libc = "0.2"
#libloading = "0.8"
#libtest-mimic = "0.6"
#log = "0.4"
#nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
## https://github.com/Razaekel/noise-rs/issues/335 (Updated dependencies)
#noise = { version = "0.8", git = "https://github.com/Razaekel/noise-rs.git", rev = "c6942d4fb70af26db4441edcf41f90fa115333f2" }
#nv-flip = "0.1"
#obj = "0.10"
#once_cell = "1.20.2"
#parking_lot = "0.12.1"
#pico-args = { version = "0.5.0", features = [
#    "eq-separator",
#    "short-space-opt",
#    "combined-flags",
#] }
#png = "0.17.14"
#pollster = "0.3"
#profiling = { version = "1", default-features = false }
#raw-window-handle = "0.6"
#rayon = "1"
#renderdoc-sys = "1.1.0"
#ron = "0.8"
#rustc-hash = "1.1.0"
#serde = "1"
#serde_json = "1.0.132"
#smallvec = "1"
#static_assertions = "1.1.0"
#strum = { version = "0.25.0", features = ["derive"] }
#tracy-client = "0.17"
#thiserror = "1.0.65"
#wgpu = { version = "23.0.0", path = "./wgpu", default-features = false }
#wgpu-core = { version = "23.0.0", path = "./wgpu-core" }
#wgpu-macros = { version = "23.0.0", path = "./wgpu-macros" }
#wgpu-test = { version = "23.0.0", path = "./tests" }
#wgpu-types = { version = "23.0.0", path = "./wgpu-types" }
#winit = { version = "0.29", features = ["android-native-activity"] }
