[package]
name = "blue_noise"
version = "0.1.0"
edition = "2021"

[dependencies]
plotly = "0.10"
rand = "0.8"
honeycomb = { git = "https://github.com/LIHPC-Computational-Geometry/honeycomb", tag = "0.6.0"}
wgpu = "23"
pollster = "0.3"
log = "0.4"
bytemuck = "1.19"
flume = "0.11"
getrandom = "0.2"
env_logger = "0.11"
