[package]
name = "blue_noise"
version = "0.1.0"
edition = "2021"

[dependencies]
plotly = "0.10"
rand = "0.8"
honeycomb = { git = "https://github.com/LIHPC-Computational-Geometry/honeycomb", rev = "a924645", features = ['render']}
wgpu = "23"
pollster = "0.3"
log = "0.4"
bytemuck = "1.19"
flume = "0.11"
getrandom = "0.2"
env_logger = "0.11"
criterion = "0.5.1"
clap = { version = "4.5.21", features = ["derive"] }

[[bench]]
name = "jfa"
harness = false

